# klata

./: Cargo.toml  mcmurphey.txt  mcmurphey.xml
changelog/: 0.1.1.md
src/: app.rs  cli.rs  db.rs  main.rs
src/app/: app.rs  mod.rs
src/app/states/: finished.rs  mod.rs  state.rs  typing.rs
src/data_capture/: clock.rs  mod.rs  tests.rs
src/text/: mod.rs  tests.rs
src/text_model/: data.rs  mod.rs  tests.rs  text_model.rs
src/widgets/: mod.rs
src/widgets/paragraph/: mod.rs  tests.rs
src/widgets/text_area/: mod.rs  reflow.rs  styled_char.rs  tests.rs  text_area.rs
