[package]
authors = [ "Ben Leadbetter" ]
description = "A touch typing exercise app for the terminal"
edition = "2021"
homepage = "https://github.com/BenLeadbetter/klata"
license = "MIT/Apache-2.0"
name = "klata"
readme = "README.md"
repository = "https://github.com/BenLeadbetter/klata"
version = "0.1.1"

[dependencies]
tui = "0.17"
crossterm = "0.23"
clap = { version = "3.1.6", features = ["derive"] }
