[package]
authors = [ "Ben Leadbetter" ]
description = "A touch typing exercise app for the terminal"
edition = "2021"
homepage = "https://github.com/BenLeadbetter/klata"
license = "MIT/Apache-2.0"
name = "klata"
readme = "README.md"
repository = "https://github.com/BenLeadbetter/klata"
version = "0.1.1"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.0"
crossterm = "0.23"
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4.0.0"
quick-xml = "0.22"
serde = { version = "1.0.136", features = ["derive"] }
sled = "0.34.7"
tui = "0.17"
